Layout issues on mobile #3250

--- a/akvo/rsr/front-end/styles-src/main.scss
+++ b/akvo/rsr/front-end/styles-src/main.scss
@@ -394,6 +394,9 @@ nav.navbar-fixed-top {
     button.navbar-toggle {
         background: $rsrBlue;
         border: 1px solid $rsrBlue;
+        @media screen and (max-width: 760px){
+          margin-right: 0;
+        }
         &:hover {
             background: white;
             border: 1px solid $rsrBlue;
@@ -1390,7 +1393,7 @@ h4.detailedInfo {
                 cursor: pointer;
                 @include responsive(small-max-screens) {
                     padding: 10px 16px;
-                    font-size: 18px;
+                    font-size: 1em;
                 }
 
                 &:hover {
@@ -1517,6 +1520,35 @@ h4.detailedInfo {
                 padding-bottom: 5px;
             }
         }
+        .form-inline{
+          @media screen and (max-width: 760px){
+            padding: 0;
+            input{
+
+            }
+            .bootstrap-typeahead-input{
+              width: 100%;
+              display: flex;
+              input{
+                flex: 1;
+                width: auto;
+              }
+            }
+          }
+        }
+        .advanced-filter{
+          @media screen and (max-width: 760px){
+            display: block;
+            margin-bottom: 15px;
+            position: relative;
+            .caret{
+              position: absolute;
+              left: auto;
+              right: 13px;
+              top: 16px;
+            }
+          }
+        }
         .sortList {
             display: inline-block;
             margin-right: 15px;
@@ -1605,10 +1637,12 @@ h4.detailedInfo {
                 margin-bottom: 15px;
                 list-style-type: none;
                 padding: 0 0 15px 0;
-                display: inline;
+                // display: inline;
                 width: 24.5%;
                 float: left;
-                min-height: 265px;
+                @media screen and (min-width: 760px){
+                  min-height: 265px;
+                }
                 @include border-radius(3px);
                 background: white;
                 margin-right: 0.66%;
@@ -1634,6 +1668,9 @@ h4.detailedInfo {
                 }
                 border: thin solid rgba($rsrBlue, 0);
                 @include transition(all 0.2s ease-in);
+                @media screen and (max-width: 640px){
+
+                }
             }
         }
     }
@@ -1659,16 +1696,16 @@ h4.detailedInfo {
             margin-top: 0;
         }
         .thumbImg {
-            height: 160px;
+            // height: 160px;
             overflow-y: hidden;
             position: relative;
             background-color: rgba($akvoBlack, 0.05);
             img {
                 width: 100%;
-                position: absolute;
-                top: 0%;
-                left: 50%;
-                transform: translate(-50%, 0%);
+                // position: absolute;
+                // top: 0%;
+                // left: 50%;
+                // transform: translate(-50%, 0%);
             }
         }
         .projectLocation {
@@ -1728,8 +1765,10 @@ h4.detailedInfo {
             }
         }
         .projectListUlcontain {
-            max-height: calc(100vh - 240px);
-            overflow-y: scroll;
+            @media screen and (min-width: 760px){
+              max-height: calc(100vh - 240px);
+              overflow-y: scroll;
+            }
             p.listMsg {
                 font-size: 1.2em;
                 text-align: center;
@@ -1744,18 +1783,26 @@ h4.detailedInfo {
                 li {
                     margin-bottom: 5px;
                     list-style-type: none;
-                    display: inline;
+                    // display: inline;
                     width: 49%;
                     float: left;
-                    min-height: 285px;
+                    @media screen and (min-width: 760px){
+                      min-height: 285px;
+                    }
                     @include border-radius(3px);
-                    background: white;
+                    background: rgba(32, 32, 36, 0.05);
                     margin-right: 2%;
                     -webkit-transition: all 2s linear;
                     -moz-transition: all 2s linear;
                     -o-transition: all 2s linear;
                     transition: all 2s linear;
-                    padding: 5px;
+                    padding: 0;
+                    .thumbImg img{
+                      border: none;
+                    }
+                    .text{
+                      padding: 5px 10px;
+                    }
                     @include transition(all 0.2s ease-in);
                     &.highlightProject {
                         box-shadow: 0 0 12px rgba(77, 90, 130, 0) !important;
